--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "California Theme",
+  "name": "new-england-theme",
   "version": "1.0.0",
   "description": "A modern church theme for Sitesfor.church",
   "main": "index.js",
@@ -22,11 +22,6 @@
   },
   "devDependencies": {
     "airtable": "^0.4.1",
-    "browser-sync": "^2.13.0",
-    "gulp-data": "^1.2.1",
-    "gulp-sass": "^2.3.1",
-    "gulp-streamify": "^1.0.2",
-    "gulp-util": "^3.0.7",
     "babel-plugin-transform-es2015-arrow-functions": "^6.5.2",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.6.5",
     "babel-plugin-transform-es2015-block-scoping": "^6.6.5",
@@ -38,6 +33,8 @@
     "babel-plugin-transform-es2015-spread": "^6.6.5",
     "babel-plugin-transform-es2015-template-literals": "^6.6.5",
     "babel-preset-es2015": "^6.5.0",
+    "bower": "^1.7.9",
+    "browser-sync": "^2.13.0",
     "cross-spawn": "^2.1.4",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
@@ -45,22 +42,25 @@
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.1",
+    "gulp-data": "^1.2.1",
+    "gulp-downloader": "^1.0.4",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.0",
+    "gulp-json-editor": "^2.2.1",
+    "gulp-json-transform": "^0.3.2",
     "gulp-load-plugins": "^1.1.0",
     "gulp-notify": "^2.2.0",
     "gulp-rev": "^7.0.0",
     "gulp-rev-collector": "^1.0.2",
+    "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-uglify": "^1.5.1",
+    "gulp-util": "^3.0.7",
     "js-yaml": "^3.5.4",
+    "request": "^2.72.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
-    "gulp-downloader": "^1.0.4",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-json-editor": "^2.2.1",
-    "gulp-json-transform": "^0.3.2",
-    "gulp-load-plugins": "^1.1.0","gulp-streamify": "^1.0.2",
-    "request": "^2.72.0",
     "vinyl-source-stream": "^1.1.0",
     "yargs": "^4.1.0"
   }
