--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,23 @@
+# What's the name of the church?
 title: Cranesville Bible Church, Cranesville, PA
-email: "pastorryanhaydenl@gmail.com"
+# Give a brief description of the church
 description: > # this means to ignore newlines until "baseurl:"
-  Sitesfor.church makes affordable church websites built for the needs of the 90% of churches with less than 200 members.  
-  You won't find a professional solution that is more affordable or easier to use.  We also are deliberate about giving jobs
-  to Bible college students and other aspiring pastors.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus blanditiis odio corrupti, 
+    illum architecto consequuntur, quaerat unde repudiandae qui temporibus! Fuga maxime molestiae hic impedit 
+    sit sint perferendis rerum unde.
+# Leave this alone
 baseurl: "" # the subpath of your site, e.g. /blog
+# Change this to the domain when you are finished and ready to publish.
 url: "http://localhost:3000/" # the base hostname & protocol for your site | Switch to "http://biblebaptistmattoon.org/" Before running Glynn.  Afterwards change it back to http://localhost:4000/
-twitter_username: jekyllrb
-github_username:  jekyll
+
+# This is the path to the default images.  If you add different default images you can change them here.
 default_header_image: "assets/default_header.jpg"
 default_sermon_image: "assets/default_header.jpg"
 default_blog_image: "assets/default_header.jpg"
 default_about_image: "assets/default_header.jpg"
 default_calendar_image: "assets/calendar_default.jpg"
+
+# LEAVE EVERYTHING ELSE ALONE!!
 
 # Build settings
 markdown: kramdown
