--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.7",
     "js-yaml": "^3.5.4",
+    "jsonfile": "^2.3.1",
     "request": "^2.72.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
