added some scripts to package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,32 @@
 {
-  "name": "new-england-theme",
+  "name": "SitesforChurch-master-template.",
   "version": "1.0.0",
-  "description": "A modern church theme for Sitesfor.church",
+  "description": "All the templates for Sitesfor.church intended for use by our site-reps",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "jshint:dist": "jshint src/js/*.js'",
+    "jshint": "npm run jshint:dist",
+    "jscs": "jscs src/*.js",
+    "browserify": "browserify  -s Validating -o ./dist/js/build.js ./lib/index.js",
+    "browsersync": "browser-sync start --server --files 'src/*'",
+    "uglify:dist": "uglify src/js/**/*.js > dist/js/script.min.js",
+    "uglify": "npm run uglify:dist",
+    "test": "mocha",
+    "clean:dist": "rm -rf dist",
+    "clean:tmp": "rm -rf tmp",
+    "clean": "npm run clean:dist && npm run clean:tmp",
+    "copy:dist": "cp src/!{js,css,index.html} dist/",
+    "copy": "npm run copy:dist",
+    "sass:dist": "sass src/css/style.scss > dist/css/style.min.css",
+    "sass": "npm run sass:dist",
+    "htmlmin:dist": "htmlmin -cs dist/index.html tmp/index.html",
+    "imagemin": "imagemin src/images/* dist/images/* -p",
+    "build:html": "npm run htmlmin",
+    "build:js": "npm run jshint && npm run uglify",
+    "build:css": "npm run sass",
+    "build:images": "npm run imagemin",
+    "build": "npm run clean && npm run build:html && npm run build:js && npm run build:css && npm run build:imagemin",
+    "watch": "watch 'npm run build' ."
   },
   "repository": {
     "type": "git",
@@ -18,7 +40,28 @@
   "homepage": "https://github.com/SitesForChurch/sitesforchurch-jekyll#readme",
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-downloader": "^1.0.4"
+    "gulp-downloader": "^1.0.4",
+    "airtable": "^0.4.1",
+    "bower": "^1.7.9",
+    "browser-sync": "latest",
+    "browserify": "latest",
+    "cssmin": "latest",
+    "expect.js": "latest",
+    "imagemin": "latest",
+    "istanbul": "latest",
+    "jscs": "latest",
+    "jshint": "latest",
+    "jsonfile": "^2.3.1",
+    "mocha": "latest",
+    "request": "^2.72.0",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5",
+    "should": "latest",
+    "uglify-js": "latest",
+    "uglifyjs": "latest",
+    "vinyl-source-stream": "^1.1.0",
+    "watch": "latest",
+    "yargs": "^4.1.0"
   },
   "devDependencies": {
     "airtable": "^0.4.1",
